--- a/lokasi_rumah.html
+++ b/lokasi_rumah.html
@@ -28,44 +28,6 @@
       border: 1px solid #ccc;
       cursor: pointer;
     }
-    .gear-container {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-    }
-    .gear-btn {
-      font-size: 1.5em;
-      background: none;
-      border: none;
-      cursor: pointer;
-    }
-    .pengaturan {
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      top: 30px;
-      right: 0;
-      background: white;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 5px;
-      z-index: 99;
-    }
-    .pengaturan.hidden {
-      display: none;
-    }
-    .pengaturan button {
-      background-color: #3498db;
-      color: white;
-      border: none;
-      padding: 6px 10px;
-      margin: 4px;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    .pengaturan button:hover {
-      background-color: #2980b9;
-    }
     .container {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -81,6 +43,7 @@
       background-color: #ffffff;
       border: 2px solid #cbd5e1;
       position: relative;
+      transition: transform 0.2s ease;
     }
     .item:hover {
       transform: scale(1.03);
@@ -118,14 +81,6 @@
 <body>
   <h1>Kategori: Di Rumah</h1>
 
-  <div class="gear-container">
-    <button class="gear-btn" onclick="togglePengaturan()">⚙️</button>
-    <div id="menuPengaturan" class="pengaturan hidden">
-      <button onclick="tambahKosakata()">➕ Tambah</button>
-      <button onclick="hapusKosakata()">🗑️ Hapus</button>
-    </div>
-  </div>
-
   <div class="voice-select">
     <label for="voiceSelect">Pilih Suara:</label>
     <select id="voiceSelect">
@@ -155,46 +110,8 @@
     ];
 
     function loadItems() {
-      const saved = JSON.parse(localStorage.getItem(key) || '[]');
-      return [...defaultItems.filter(d => !saved.some(s => s.teks === d.teks)), ...saved];
-    }
-
-    function saveItems(items) {
-      localStorage.setItem(key, JSON.stringify(items));
-    }
-
-    let dataKategori = {
-      judul: "Di Rumah",
-      items: loadItems()
-    };
-
-    const favoritList = JSON.parse(localStorage.getItem('favoritList') || '[]');
-
-    function togglePengaturan() {
-      document.getElementById('menuPengaturan').classList.toggle('hidden');
-    }
-
-    function tambahKosakata() {
-      const teks = prompt("Masukkan teks:");
-      const emoji = prompt("Masukkan emoji:");
-      if (teks && emoji) {
-        const newItem = { teks: teks.trim(), emoji: emoji.trim() };
-        dataKategori.items.push(newItem);
-        saveItems(dataKategori.items);
-        renderGridKategori();
-      }
-    }
-
-    function hapusKosakata() {
-      const teks = prompt("Masukkan teks yang ingin dihapus:");
-      const index = dataKategori.items.findIndex(item => item.teks === teks);
-      if (index !== -1) {
-        dataKategori.items.splice(index, 1);
-        saveItems(dataKategori.items);
-        renderGridKategori();
-      } else {
-        alert("Teks tidak ditemukan!");
-      }
+      const tambahan = JSON.parse(localStorage.getItem(key)) || [];
+      return defaultItems.concat(tambahan);
     }
 
     function bicara(teks) {
@@ -203,6 +120,7 @@
     }
 
     function toggleFavorit(teks) {
+      let favoritList = JSON.parse(localStorage.getItem('favoritList')) || [];
       const index = favoritList.indexOf(teks);
       if (index !== -1) {
         favoritList.splice(index, 1);
@@ -215,8 +133,11 @@
 
     function renderGridKategori() {
       const container = document.getElementById('gridKategori');
+      const data = loadItems();
+      const favoritList = JSON.parse(localStorage.getItem('favoritList')) || [];
       container.innerHTML = '';
-      dataKategori.items.forEach(item => {
+
+      data.forEach(item => {
         const isFavorit = favoritList.includes(item.teks);
         const div = document.createElement('div');
         div.className = 'item';
@@ -233,7 +154,9 @@
       });
     }
 
-    window.onload = () => renderGridKategori();
+    window.onload = () => {
+      renderGridKategori();
+    };
   </script>
 </body>
 </html>
