--- a/lokasi_rumah.html
+++ b/lokasi_rumah.html
@@ -81,6 +81,8 @@
       background-color: #ffffff;
       border: 2px solid #cbd5e1;
       position: relative;
+      user-select: none;
+      transition: transform 0.2s ease;
     }
     .item:hover {
       transform: scale(1.03);
@@ -105,6 +107,7 @@
       border: none;
       font-size: 1.2em;
       cursor: pointer;
+      user-select: none;
     }
     .fav {
       color: gray;
@@ -137,8 +140,8 @@
   <div class="container" id="gridKategori"></div>
 
   <script>
-    const key = 'kosakata_lokasi_rumah';
-    const defaultItems = [
+    // Data master yang sama dengan favorit
+    const dataMaster = [
       { teks: 'Saya di rumah', emoji: '🏡' },
       { teks: 'Saya mau mandi', emoji: '🛀🏻' },
       { teks: 'Saya mau makan', emoji: '🍛' },
@@ -154,13 +157,15 @@
       { teks: 'Saya mau nonton tv', emoji: '📺' }
     ];
 
+    // Load data kategori dari localStorage atau default
     function loadItems() {
-      const saved = JSON.parse(localStorage.getItem(key) || '[]');
-      return [...defaultItems.filter(d => !saved.some(s => s.teks === d.teks)), ...saved];
+      const saved = JSON.parse(localStorage.getItem('kosakata_lokasi_rumah') || '[]');
+      // Gabungkan saved dengan default tanpa duplikasi
+      return [...dataMaster.filter(d => !saved.some(s => s.teks === d.teks)), ...saved];
     }
 
     function saveItems(items) {
-      localStorage.setItem(key, JSON.stringify(items));
+      localStorage.setItem('kosakata_lokasi_rumah', JSON.stringify(items));
     }
 
     let dataKategori = {
@@ -168,6 +173,7 @@
       items: loadItems()
     };
 
+    // Load favorit dari localStorage
     const favoritList = JSON.parse(localStorage.getItem('favoritList') || '[]');
 
     function togglePengaturan() {
@@ -203,9 +209,9 @@
     }
 
     function toggleFavorit(teks) {
-      const index = favoritList.indexOf(teks);
-      if (index !== -1) {
-        favoritList.splice(index, 1);
+      const idx = favoritList.indexOf(teks);
+      if (idx !== -1) {
+        favoritList.splice(idx, 1);
       } else {
         favoritList.push(teks);
       }
@@ -216,12 +222,18 @@
     function renderGridKategori() {
       const container = document.getElementById('gridKategori');
       container.innerHTML = '';
+
       dataKategori.items.forEach(item => {
         const isFavorit = favoritList.includes(item.teks);
+
+        // Cari emoji dari dataMaster agar sinkron dengan favorit
+        const dataItem = dataMaster.find(d => d.teks === item.teks);
+        const emoji = dataItem ? dataItem.emoji : '❓';
+
         const div = document.createElement('div');
         div.className = 'item';
         div.innerHTML = `
-          <div class="emoji">${item.emoji}</div>
+          <div class="emoji">${emoji}</div>
           <p>${item.teks}</p>
           <div class="controls">
             <button class="fav ${isFavorit ? 'active' : ''}" onclick="event.stopPropagation(); toggleFavorit('${item.teks}')">${isFavorit ? '⭐' : '☆'}</button>
@@ -233,7 +245,9 @@
       });
     }
 
-    window.onload = () => renderGridKategori();
+    window.onload = () => {
+      renderGridKategori();
+    };
   </script>
 </body>
 </html>
